# one

./: .gitignore  404.html  CMakeLists.txt  DEPENDENCIES  Dockerfile  LICENSE  LICENSE-COMMERCIAL  Makefile  README.markdown  SECURITY.markdown  index.html  mkdocs.yml  package-lock.json  package.json  release.sh  sitemap.xml
api/: index.html
contrib/file2metapack/: CMakeLists.txt  file2metapack.cc
enterprise/index/: CMakeLists.txt  enterprise_index.cc
enterprise/index/include/sourcemeta/one/: enterprise_index.h
enterprise/server/: CMakeLists.txt  action_jsonschema_rdf_v1.cc  action_mcp_v1.cc
enterprise/server/include/sourcemeta/one/: enterprise_server.h  enterprise_server_action_auth_callback_v1.h  enterprise_server_action_auth_login_v1.h  enterprise_server_action_auth_logout_v1.h  enterprise_server_action_jsonschema_rdf_v1.h  enterprise_server_action_mcp_v1.h  enterprise_server_actions.h
enterprise/src/web/: CMakeLists.txt  helpers.h  page.h  style.scss
enterprise/src/web/pages/: index.cc
enterprise/src/web/scripts/: editor.js  main.js  search.js
enterprise/unit/authentication/: CMakeLists.txt  authentication_test.cc  discovery_test.cc  oidc_test.cc  session_test.cc
src/actions/: CMakeLists.txt  action_auth_callback_v1.h  action_auth_login_v1.h  action_auth_logout_v1.h  action_default.h  action_default_v1.h  action_dependency_tree_v1.h  action_get_schema_dependencies_v1.h  action_get_schema_dependents_v1.h  action_get_schema_health_v1.h  action_get_schema_locations_v1.h  action_get_schema_metadata_v1.h  action_get_schema_positions_v1.h  action_get_schema_stats_v1.h  action_health_check.h  action_health_check_v1.h  action_jsonschema_evaluate.h  action_jsonschema_evaluate_v1.h  action_jsonschema_rdf_v1.h  action_jsonschema_serve.h  action_jsonschema_serve_v1.h  action_jsonschema_trace_v1.h  action_list_directory_v1.h  action_mcp_v1.h  action_not_found.h  action_not_found_v1.h  action_schema_search.h  action_schema_search_v1.h  action_serve_explorer_artifact.h  action_serve_explorer_artifact_v1.h  action_serve_metapack_file.h  action_serve_metapack_file_v1.h  action_serve_schema_artifact.h  action_serve_schema_artifact_v1.h  action_serve_static.h  action_serve_static_file_v1.h  action_serve_static_v1.h  actions.cc  base.cc  dispatch.cc  (+2 more)
src/actions/include/sourcemeta/one/: actions.h  actions_handlers.h  actions_helpers.h  actions_ids.h  actions_jsonschema_evaluate.h  actions_jsonschema_serve.h  actions_schema_search.h  actions_serve_metapack_file.h
src/authentication/: CMakeLists.txt  authentication.cc  authentication_format.h  authentication_save.cc  discovery.cc  oidc.cc  session.cc
src/authentication/include/sourcemeta/one/: authentication.h  authentication_discovery.h  authentication_error.h  authentication_oidc.h  authentication_session.h
src/configuration/: CMakeLists.txt  covers_entry.cc  matches_entry.cc  parse.cc  read.cc  resolve_path.cc  resolve_schema.cc
src/configuration/include/sourcemeta/one/: configuration.h  configuration_error.h
src/configuration/schema/: collection.json  configuration.json  contents.json  page.json
src/dispatcher/: CMakeLists.txt  base.cc  dispatch.cc
src/dispatcher/include/sourcemeta/one/: dispatcher.h
src/http/: CMakeLists.txt
src/http/include/sourcemeta/one/: http.h  http_app.h  http_helpers.h  http_request.h  http_response.h  http_server.h  http_uwebsockets.h
src/index/: CMakeLists.txt  adapter.h  async.h  error.h  explorer.h  generators.h  index.cc  output.h  rules.h
src/metapack/: CMakeLists.txt  metapack.cc
src/metapack/include/sourcemeta/one/: metapack.h
src/pkg/: CMakeLists.txt  pkg.cc
src/pkg/include/sourcemeta/one/: pkg.h
src/resolver/: CMakeLists.txt  resolver.cc
src/resolver/include/sourcemeta/one/: resolver.h  resolver_error.h
src/router/: CMakeLists.txt  artifact.cc  base.cc  evaluate.cc  router.cc
src/router/include/sourcemeta/one/: router.h  router_lru.h
src/search/: CMakeLists.txt  search.cc
src/search/include/sourcemeta/one/: search.h
src/server/: CMakeLists.txt  action_jsonschema_evaluate.h  action_jsonschema_serve.h  action_schema_search.h  action_serve_metapack_file.h  evaluate.h  helpers.h  request.h  response.h  search.h  server.cc  status.h  uwebsockets.h
src/shared/: CMakeLists.txt  configure.h.in  metapack.cc  uri.cc  version.cc
src/shared/include/sourcemeta/one/: shared.h  shared_encoding.h  shared_metapack.h  shared_path.h  shared_uri.h  shared_version.h
test/unit/authentication/: CMakeLists.txt  authentication_test.cc
test/unit/configuration/: CMakeLists.txt  configuration.test.json  configuration_read_test.cc  configuration_resolve_path_test.cc  configuration_resolve_schema_test.cc  configuration_test.cc
test/unit/configuration/stub/: base_path_deep.json  base_path_simple.json  base_path_slash.json  base_path_trailing_slash.json  origin_custom_port.json  origin_https_default_port.json  origin_with_fragment.json  origin_with_query.json  origin_with_userinfo.json  origin_with_userinfo_query_fragment_port.json  parse_invalid_priority_above.json  parse_invalid_priority_below.json  parse_valid_005.json  parse_valid_006.json  parse_valid_007.json  parse_valid_008.json  parse_valid_011_priority_explicit.json  parse_valid_authentication_extends.json  parse_valid_authentication_extends_base.json  read_invalid_004.json  read_invalid_005.json  read_invalid_006.json  read_invalid_007.json  read_valid_001.json  read_valid_006.json  read_valid_008.json  read_valid_010.json  read_valid_011.json  read_valid_014.json  read_valid_015.json  read_valid_015_b.json  read_valid_015_c.json  read_valid_016.json  read_valid_016_b.json  read_valid_016_c.json  read_valid_016_d.json  read_valid_017.json  read_valid_018.json
test/unit/mcp/: CMakeLists.txt  mcp_test.cc
test/unit/metapack/: CMakeLists.txt  metapack_corrupt_test.cc  metapack_test.cc
test/unit/resolver/: CMakeLists.txt  resolver_test.cc
test/unit/search/: CMakeLists.txt  search_build_test.cc  search_query_test.cc  search_test.cc  search_view_corrupt_test.cc  search_view_for_each_test.cc  search_view_test.cc
(+1154 files in other folders)
